syntax = "proto3";

package kudo.controller;
import "google/protobuf/empty.proto";

//Represents the liveness status of an Instance
enum Status {
  RUNNING = 0;
  STARTING = 1;
  STOPPED = 2;
  STOPPING = 3;
  DESTROYING = 4;
  TERMINATED = 5;
  FAILED = 6;
  SCHEDULING = 7;
  SCHEDULED = 8;
}

//Represents the type of workload running
enum Type {
    CONTAINER = 0;
}

// Represents a Node status message
message NodeStatus {
  string id = 1;
  Status status = 2;
  string statusDescription = 3;
  Resource resource = 4;
  repeated Instance instances = 5;
}

// Represents an Instance
message Instance {
  string id = 1;
  string name = 2;
  Type type = 3;
  Status status = 4;
  string uri = 5;
  repeated string environnement = 6;
  Resource resource = 7;
  repeated Port ports = 8;
  string ip = 9;
}

message Port {
  int32 source = 1;
  int32 dest = 2;
}

// Represent a resource entry
message ResourceSummary {
    int32 cpu = 1;
    int32 memory = 2;
    int32 disk = 3;
}

// Represents the resources used by the Instance & the limit where the workload will be killed
message Resource {
  ResourceSummary limit = 1;
  ResourceSummary usage = 2;
}

service ControllerService {
  rpc UpdateNodeStatus(stream NodeStatus) returns (google.protobuf.Empty) {}
}